--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Start Docker Compose services
         run: |
-          docker compose -f infra/docker-compose.ci.yml up -d
+          docker compose -f docker-compose.ci.yml up -d
 
       - name: Install Node dependencies
         working-directory: frontend
