--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -15,8 +15,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Start Docker Compose services
-        run: |
-          docker compose -f docker-compose.ci.yml up -d
+        working-directory: infra
+        run: docker compose -f docker-compose.ci.yml up -d
 
       - name: Install Node dependencies
         working-directory: frontend
