--- a/infra/docker-compose.ci.yml
+++ b/infra/docker-compose.ci.yml
@@ -3,19 +3,20 @@ version: "3.9"
 services:
   localstack:
     image: localstack/localstack:latest
+    environment:
+      - SERVICES=s3,cognito-idp,sts,iam
+      - DEFAULT_REGION=ap-northeast-1
+      - DEBUG=1
     ports:
       - "4566:4566"
-    environment:
-      - SERVICES=cognito,s3,rds
-      - AWS_DEFAULT_REGION=ap-northeast-1
-      - DEBUG=1
-    volumes:
-      - "./localstack/init:/etc/localstack/init/ready.d"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:4566/health"]
       interval: 5s
-      timeout: 3s
+      timeout: 5s
       retries: 20
+    volumes:
+      - ./localstack/init/ready.d:/etc/localstack/init/ready.d:ro
+      - ./localstack/init/output:/tmp/localstack-output
 
   mysql:
     image: mysql:8.0
