--- a/infra/docker-compose.ci.yml
+++ b/infra/docker-compose.ci.yml
@@ -4,7 +4,7 @@ services:
   localstack:
     image: localstack/localstack:latest
     environment:
-      - SERVICES=s3,cognito-idp,sts,iam
+      - SERVICES=s3
       - DEFAULT_REGION=ap-northeast-1
       - DEBUG=1
     ports:
