--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -16,12 +16,8 @@ jobs:
 
       - name: Start Docker Compose services
         working-directory: infra
-        continue-on-error: true
+        #continue-on-error: true
         run: docker compose -f docker-compose.ci.yml up -d
-
-      - name: Print LocalStack logs
-        working-directory: infra
-        run: docker logs infra-localstack-1 || true
 
       - name: Debug Compose config
         working-directory: infra
@@ -37,17 +33,21 @@ jobs:
 
       - name: Run Playwright E2E tests
         working-directory: frontend
+        env:
+          PLAYWRIGHT_BASE_URL: http://localhost:8081
         run: npm run test:e2e
 
       - name: Install Allure CLI
         run: npm install -g allure-commandline
 
       - name: Generate Allure report
+        if: always()
         working-directory: frontend
         run: |
           allure generate allure-results --clean -o allure-report
 
       - name: Upload Allure report as artifact
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
