--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,14 +16,15 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
+    "@mdi/font": "^7.0.96",
+    "@playwright/test": "^1.40.0",
+    "@types/node": "^25.0.3",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/compiler-sfc": "^3.3.4",
-    "vuetify": "^3.3.0",
-    "@mdi/font": "^7.0.96",
-    "sass": "^1.70.0",
-    "@playwright/test": "^1.40.0",
+    "allure-commandline": "^2.13.9",
     "allure-playwright": "^2.0.0",
-    "allure-commandline": "^2.13.9"
+    "sass": "^1.70.0",
+    "vite": "^5.0.0",
+    "vuetify": "^3.3.0"
   }
 }
