--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -21,17 +21,23 @@ jobs:
 
       - name: Wait for services to be healthy
         working-directory: infra
+        timeout-minutes: 5
         run: |
           echo "Waiting for MySQL to be healthy..."
           docker compose -f docker-compose.ci.yml exec -T mysql mysqladmin ping -h localhost -uroot -proot || exit 1
           
           echo "Waiting for Spring Boot to be healthy..."
-          for i in {1..30}; do
+          for i in {1..60}; do
             if curl -f http://localhost:8080/actuator/health > /dev/null 2>&1; then
               echo "Spring Boot is healthy"
               break
             fi
-            echo "Attempt $i/30: Spring Boot not ready yet, waiting..."
+            if [ $i -eq 60 ]; then
+              echo "Spring Boot failed to start"
+              docker compose -f docker-compose.ci.yml logs springboot
+              exit 1
+            fi
+            echo "Attempt $i/60: Spring Boot not ready yet, waiting..."
             sleep 2
           done
           
@@ -40,6 +46,11 @@ jobs:
             if curl -f http://localhost:8081 > /dev/null 2>&1; then
               echo "Frontend is ready"
               break
+            fi
+            if [ $i -eq 30 ]; then
+              echo "Frontend failed to start"
+              docker compose -f docker-compose.ci.yml logs frontend
+              exit 1
             fi
             echo "Attempt $i/30: Frontend not ready yet, waiting..."
             sleep 2
@@ -72,23 +83,24 @@ jobs:
         run: npm run test:e2e
 
       - name: Install Allure CLI
+        if: success()
         run: npm install -g allure-commandline
 
       - name: Generate Allure report
-        if: always()
+        if: success()
         working-directory: frontend
         run: |
           npx allure generate allure-results --clean -o allure-report
 
       - name: Upload Allure report as artifact
-        if: always()
+        if: success()
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
           path: frontend/allure-report
 
       - name: Deploy Allure report to GitHub Pages
-        if: github.ref == 'refs/heads/main'
+        if: success() && github.ref == 'refs/heads/main'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
