--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -67,6 +67,17 @@ jobs:
           echo -e "\n=== Frontend logs ==="
           docker compose -f docker-compose.ci.yml logs frontend || true
 
+      - name: Verify backend connectivity
+        if: success()
+        working-directory: frontend
+        run: |
+          echo "Testing backend connectivity from host..."
+          curl -v http://localhost:8080/actuator/health || true
+          echo -e "\nTesting login endpoint..."
+          curl -X POST http://localhost:8080/public/login \
+            -H "Content-Type: application/json" \
+            -d '{"username":"testuser","password":"Test1234!"}' || true
+
       - name: Install Node dependencies
         working-directory: frontend
         run: npm ci
@@ -81,6 +92,27 @@ jobs:
         env:
           PLAYWRIGHT_BASE_URL: http://localhost:8081
         run: npm run test:e2e
+
+      - name: Upload Playwright test results (on failure)
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-test-results
+          path: frontend/test-results/
+          retention-days: 5
+
+      - name: Print container logs (on failure)
+        if: failure()
+        working-directory: infra
+        run: |
+          echo "=== MySQL logs ==="
+          docker compose -f docker-compose.ci.yml logs mysql || true
+          echo -e "\n=== Spring Boot logs ==="
+          docker compose -f docker-compose.ci.yml logs springboot || true
+          echo -e "\n=== Frontend logs ==="
+          docker compose -f docker-compose.ci.yml logs frontend || true
+          echo -e "\n=== All containers status ==="
+          docker compose -f docker-compose.ci.yml ps || true
 
       - name: Install Allure CLI
         if: success()
