--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,4 +9,5 @@ RUN npm run build
 # Production stage
 FROM nginx:alpine
 COPY --from=builder /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
