--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -5,6 +5,10 @@ on:
     branches: [ main ]
   pull_request:
 
+permissions:
+  contents: write
+  pages: write
+
 jobs:
   e2e:
     runs-on: ubuntu-latest
