--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -14,9 +14,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        with:
-          # Pull Request の場合、HEAD コミットをチェックアウト
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: Start Docker Compose services
         working-directory: infra
@@ -136,7 +133,7 @@ jobs:
           path: frontend/allure-report
 
       - name: Deploy Allure report to GitHub Pages
-        if: success() && github.ref == 'refs/heads/main' && github.event_name == 'push'
+        if: success() && github.ref == 'refs/heads/main'
         permissions:
           contents: write
         uses: peaceiris/actions-gh-pages@v3
