--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -4,7 +4,8 @@ on:
   workflow_dispatch:  # 手動実行のみ許可
 
 permissions:
-  contents: read
+  contents: write
+  pages: write
 
 jobs:
   e2e:
@@ -134,8 +135,6 @@ jobs:
 
       - name: Deploy Allure report to GitHub Pages
         if: success() && github.ref == 'refs/heads/main'
-        permissions:
-          contents: write
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
