Docker Compose 停止

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -139,3 +139,8 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: frontend/allure-report
+
+      - name: Stop Docker Compose services
+        if: always()
+        working-directory: infra
+        run: docker compose -f docker-compose.ci.yml down -v
