--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
     "test:e2e:report": "allure generate allure-results -o allure-report --clean && allure open allure-report",
     "manual:generate": "bash ../scripts/generate-manual.sh",
     "manual:generate:user": "bash ../scripts/generate-manual.sh --type user",
-    "manual:generate:admin": "bash ../scripts/generate-manual.sh --type admin"
+    "manual:generate:admin": "bash ../scripts/generate-manual.sh --type admin",
+    "manual:generate:ai": "bash ../scripts/generate-manual.sh --ai",
+    "manual:generate:user:ai": "bash ../scripts/generate-manual.sh --type user --ai",
+    "manual:generate:admin:ai": "bash ../scripts/generate-manual.sh --type admin --ai"
   },
   "dependencies": {
     "axios": "^1.5.0",
